# zeroskip

./: .gitignore  .travis.yml  LICENSE  Makefile  Makefile.am  README.md  config.mk  configure.ac  flymake.mk  libzeroskip.pc.in
benchmark/: .gitignore  Makefile.am  bench-common.c  bench-common.h  crc32bench.c  zsbench.c
doc/: .gitignore  architecture.txt  zeroskip-specification.md  zeroskip.txt
doc/man/: Makefile.am
examples/: Makefile
include/: Makefile.am
include/libzeroskip/: Makefile.am  btree.h  crc32c.h  log.h  memtree.h  mfile.h  strarray.h  util.h  version.h.in  zeroskip.h
src/: Makefile  Makefile.am  bptree.c  bptree.h  btree.c  btree.h  crc32c.c  crc32c.h  cstring.c  cstring.h  file-lock.c  file-lock.h  htable.c  htable.h  libzeroskip.symbols  list.h  log.c  log.h  macros.h  mappedfile.c  mappedfile.h  memtree.c  mfile.c  pqueue.c  pqueue.h  strarray.c  strarray.h  util.c  util.h  vecu64.c  vecu64.h  version.h  zeroskip-active.c  zeroskip-asserts.c  zeroskip-dotzsdb.c  zeroskip-file.c  zeroskip-filename.c  zeroskip-finalised.c  zeroskip-header.c  zeroskip-iterator.c  (+7 more)
tests/: .gitignore  Makefile  Makefile.am  bt-test.c  unit-crc32c.c  unit-memtree.c  unit-strarr.c  unit-vecu64.c  unit-zsdb.c  unit.c  unit.h  vecu64-test.c  write_random_data.sh  write_random_data_from_dict.sh  zst-abort-transaction.c  zst-delete.c  zst-fetchnext-simple.c  zst-foreach-changes.c  zst-foreach-count.c  zst-foreach-heirarchy.c  zst-many.c  zst-multiopen.c
tests/FOOBAR/: .zsdb  zeroskip-a72b33d3-e184-4c0e-a082-5619ad4906a0-0
tests/data/: mailboxes.db  sdb-example.conf
tool/: Makefile.am  cmd-batch.c  cmd-bindump.c  cmd-consistent.c  cmd-damage.c  cmd-delete.c  cmd-dump.c  cmd-finalise.c  cmd-get.c  cmd-info.c  cmd-new.c  cmd-recover.c  cmd-repack.c  cmd-set.c  cmd-show.c  cmd.c  cmds.h  zeroskip.c
tools/: .gitignore  Makefile  cmd-consistent.c  cmd-damage.c  cmd-delete.c  cmd-dump.c  cmd-finalise.c  cmd-get.c  cmd-info.c  cmd-new.c  cmd-repack.c  cmd-set.c  cmd.c  cmds.h  zeroskip.c
