AM_CPPFLAGS = -I$(top_builddir)/include -I$(top_srcdir)/include
LDADD = $(top_builddir)/src/libzeroskip.la

bin_PROGRAMS = \
	zeroskip

zeroskip_SOURCES = \
	cmds.h \
	cmd.c \
	cmd-batch.c \
	cmd-consistent.c \
	cmd-damage.c \
	cmd-delete.c \
	cmd-dump.c \
	cmd-finalise.c \
	cmd-get.c \
	cmd-info.c \
	cmd-new.c \
	cmd-repack.c \
	cmd-set.c \
	cmd-show.c \
	zeroskip.c
